--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -475,7 +475,7 @@
                     -Tener estatus de matriculado </br>
                     -No tener adeudos.</br>
                     -Haber cursado como mínimo, un año en calendario como alumno Utel.</br>
-                    -Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer Título Intermedio
+                    -Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer diploma Intermedio
                     y las 12 subsecuentes para el segundo. </br>
                     -Documentación digital completa </br>
                     -Pago del documento.
@@ -496,7 +496,7 @@
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Título intermedio auxiliar</h5>
+                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Diploma intermedio auxiliar</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
@@ -538,13 +538,13 @@
                     
                     <div class="col card border border-0">
   
-                      <strong class="py-3 px-3"> Características del título intermedio</strong>
+                      <strong class="py-3 px-3"> Características del diploma intermedio</strong>
                       <a>
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
                         año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente físico digital. </br></br>
                         
-                        *Estos Títulos son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
+                        *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
 
                         *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
                       </a>
@@ -560,7 +560,7 @@
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int2" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Título  intermedio analista</h5>
+                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Diploma intermedio analista</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
@@ -602,13 +602,13 @@
                     
                     <div class="col card border border-0">
   
-                      <strong class="py-3 px-3"> Características del título intermedio</strong>
+                      <strong class="py-3 px-3"> Características del Diploma intermedio</strong>
                       <a>
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
                         año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente físico digital. </br></br>
                         
-                        *Estos Títulos son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
+                        *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
 
                         *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
                       </a>
