--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -431,6 +431,7 @@
               <h5 class="text-center m-4">
                 Criterios para devolución de documentos.
               </h5>
+
               <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
 
                 <!--Dividir col y card en div
@@ -450,7 +451,7 @@
                   
                 </script>
                 -->
-                <div class="col card border-0 h-100" >
+                <div class="col card border-0" >
                   <div class="card-body">
                     <h5 class="card-title">México</h5>
                     <p class="card-text" id="direcMex">
@@ -469,7 +470,7 @@
                   </div>
                 </div>
 
-                <div class="col card border-0 h-100" >
+                <div class="col card border-0" >
                   <div class="card-body">
                     <h5 class="card-title">Perú</h5>
                     <p class="card-text">
@@ -489,7 +490,7 @@
                   </div>
                 </div>
 
-                <div class="col card border-0 h-100" >
+                <div class="col card border-0" >
                   <div class="card-body">
                     <h5 class="card-title">Ecuador</h5>
                     <p class="card-text">
@@ -509,7 +510,26 @@
                   </div>
                 </div>
 
-                <div class="col card border-0 h-100" >
+                <div class="col card border-0" >
+                  <div class="card-body">
+                    <h5 class="card-title">Chile </h5>
+                    <p class="card-text">
+                      Nombre de la calle y número:<br/>
+                      Comuna o ciudad:<br/>
+                      Región:<br/>
+                      Provincia:<br/>
+                      Código Postal:<br/>
+                      Referencia del domicilio:<br/>
+                      Teléfono:<br/>
+                      Correo:<br/>
+                      Persona autorizada para recibir:<br/>
+                      Ubicación de google maps del domicilio:<br/>
+                      
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0" >
                   <div class="card-body">
                     <h5 class="card-title">Colombia</h5>
                     <p class="card-text">
@@ -527,8 +547,10 @@
                     </p>
                   </div>
                 </div>
-                
+
               </div> 
+              
+              
             </div>
 
           </div>
