--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -549,7 +549,7 @@
         </div>
       </div>
 
-      <!--Equivalencia academica USA-->
+      <!--Equivalencia Académica USA-->
       <div class="bloque">
         <div class="card border-0 py-3 px-3" >
             <h4><b>Equivalencia academica USA</b></h4></br>
@@ -572,7 +572,7 @@
           
           <a>
 
-              Los tiempos son aproximados y sujetos a la autotidad edicativa.</br></br>  
+              Los tiempos son aproximados y sujetos a la autoridad educativa.</br></br>  
               
               La gestión del trámite se lleva a cabo directamente en Utel y solo se podrá iniciar una vez que tengas
               tu Título o Grado académico avalado por la SEP apostillado en México y solicites el trámite que
@@ -626,12 +626,14 @@
       <!--CPA--> 
       <div class="bloque">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Certificado de programa academico para Proceso de Convalidación LATAM</b></h4></br>
+            <h4><b>Certificado de programa académica para Proceso de Convalidación LATAM</b></h4></br>
             
             <a>
                 Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
-                certificado de estudios Utel.                  
+                certificado de estudios Utel.      
+
+                El tiempo estimado es de 30 dias habiles.            
             </a>
 
             <div class="framedoc m-5">
