--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -28,7 +28,7 @@
 
         <!--Titulación-->
         <div class="py-2" style="display: none;" id="titulacion">
-          <img src="Img/Titulacion_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Titulacion_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center py-0">Titulación</h5>
           <a  href="titulacion#bloqueCertificacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncerti">Certificación</a>
           <a  href="titulacion#boqueTitulacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitu">Titulación</a>
@@ -39,7 +39,7 @@
 
         <!--Convalidación-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
-          <img src="Img/Apostilla_img.png" class="imagenes_mapa" alt="...">
+          <img src="Iimg/Apostilla_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Convalidación</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Apostilla</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Convalidación</a>
@@ -49,7 +49,7 @@
 
         <!--Servicio social-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="serviciosocial">
-          <img src="Img/Serso_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Serso_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Servicio social</h5>
           <a href="serviciosocial#SSregular" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(6)">Servicio social regular</a>
           <a href="serviciosocial#SSart91" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(7)">Servicio social por articulo 91</a>
@@ -61,7 +61,7 @@
         
         <!--Servicios escolares-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="sees">
-          <img src="Img/Escolares_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Escolares_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Servicios escolares</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tipos de ingreso</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tramites que realiza escolares</a>
@@ -71,7 +71,7 @@
 
         <!--Recoleción de documentos-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="recolecdocs">
-          <img src="Img/Documentos_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Documentos_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Recoleción de documentos</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación Utel</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos nacionales?</a>
@@ -80,10 +80,11 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Archivo</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
         </div>
+        
 
         <!--Directorio-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="directorio">
-          <img src="Img/Directorio_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Directorio_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Directorio</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Busqueda</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Departamentos</a>
@@ -92,7 +93,7 @@
 
         <!--Manuales-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="manuales">
-          <img src="Img/Manual_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Manual_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Recoleción de documentos</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación Utel</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos nacionales?</a>
@@ -104,7 +105,7 @@
 
         <!--Dudas-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="preguntfrec">
-          <img src="Img/Preguntas_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Preguntas_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Dudas</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Titulación</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Servicio social</a>
