--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -39,7 +39,7 @@
 
         <!--Convalidación-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
-          <img src="Iimg/Apostilla_img.png" class="imagenes_mapa" alt="...">
+          <img src="img/Apostilla_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Convalidación</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Apostilla</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Convalidación</a>
