--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -3106,7 +3106,7 @@
             <!--Reporte global de actividades de Servicio Social Trabajo Colaborativo-->
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomReporteGlobalTTutorias" aria-controls="offcanvasBottom"><img
-                style="height: 200px" src="img/serviciosocial/tuto/reporte-global.png
+                style="height: 200px" src="img/serviciosocial/tuto/reporte-global.png"
                 title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomReporteGlobalTTutorias"
