--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -577,19 +577,19 @@
              n         <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
-                            <img src="img/escolares/Titulo2_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio2.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio3.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio4.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio4.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio6.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio6.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="prev">
