--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -251,78 +251,71 @@
 
         <br/>
         <h3>Países</h3>
-
-
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
-            <div class="card h-100">
+            <div class="card">
+              <button class="p-0">
+              <a href="docs/latam/colombia.pdf" target="_blank">
               <img src="img/titulacion/latam/eqcolombia.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
+              </a>
+              </button>
+              
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card">
+              <button class="p-0">
+              <a href="docs/latam/peru.pdf" target="_blank">
               <img src="img/titulacion/latam/eqperu.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a short card.</p>
-              </div>
+              </a>
+              </button>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card">
+              <button class="p-0">
+              <a href="docs/latam/dominicana.pdf" target="_blank">
               <img src="img/titulacion/latam/eqdominicana.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
+              </a>
+              </button>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card">
+              <button class="p-0">
+              <a href="docs/latam/ecuador.pdf" target="_blank">
               <img src="img/titulacion/latam/eqecuador.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
+              </a>
+              </button>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card">
+              <button class="p-0">
+              <a href="docs/latam/chile.pdf" target="_blank">
               <img src="img/titulacion/latam/eqchile.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
+              </a>
+              </button>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card">
+              <button class="p-0">
+              <a href="docs/latam/argentina.pdf" target="_blank">
               <img src="img/titulacion/latam/eqargentina.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="img/titulacion/latam/eqecuador.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
+              </a>
+              </button>
             </div>
           </div>
 
         </div>
-                
+        
+        <br/>
+        <h3>Fichas tecnicas</h3>
         <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
   
           <!--Dividir col y card en div-->
+
           <div class="col card border-0 h-100" >
             <div class="card-body">
               <h5 class="card-title">PERU</h5>
@@ -539,8 +532,11 @@
           <h4><b>CINE UNESCO</b></h4></br>
           
           <a>
-            
-
+            Documento Institucional que se emite a los egresados de Ecuador interesados en realizar su convalidación. 
+            Hace constar la Modalidad de estudios y los Campos CINE-UNESCO. Deben haber acreditado el 100% de créditos del plan de estudios 
+            de licenciatura, maestría o doctorado. <br/><br/>
+            El costo es de: $15.00 USD<br/><br/>
+            El tiempo estimado de entrega es de  días hábiles.
           </a>
               <img src="img/titulacion/latam/unesco.PNG" style="max-width: 856px;" alt="">
 
@@ -633,7 +629,7 @@
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
                 certificado de estudios Utel.      
 
-                El tiempo estimado es de 30 dias habiles.            
+                El tiempo estimado es de 30 dias hábiles.            
             </a>
 
             <div class="framedoc m-5">
