--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -186,7 +186,7 @@
                   <h5 class="card-title">Constancia de estudios</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text">
-                  Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla debes tener tu expediente físico completo. 
+                  Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla debes tener tu expediente digital completo. 
                   *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
                   en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios. Toma en cuenta que calificaciones se actualizan 
                   luego de una semana de cerrado el curso.
@@ -208,7 +208,7 @@
                   <p class="card-text">
                   Documento que acredita el término de la Licenciatura y que te permite desempeñarte en el 
                   ámbito laboral de tu profesión mientras te encuentras en el proceso de titulación. 
-                  Para obtenerla debes tener tu expediente físico completo y fotografías tamaño óvalo-credencial. <br/><br/>
+                  Para obtenerla debes tener tu expediente digital completo y fotografías tamaño óvalo-credencial. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
                   Tiempo estimado de espera: 5 a 10 días hábiles.<br/>
@@ -226,7 +226,7 @@
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo debes tener cursado mínimo un cuatrimestre del programa inscrito 
-                  y tu expediente físico completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
+                  y tu expediente digital completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
                   actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
                   <br/><br/>
                   
@@ -246,7 +246,7 @@
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text">
                   Documento que permite identificarte como orgulloso alumno de la institución.
-                  Para obtenerla debes tener tu expediente físico completo.
+                  Para obtenerla debes tener tu expediente digital completo.
                   <br/><br/>
                   
                   Costo: 200.00 MXN<br/><br/>
@@ -542,7 +542,7 @@
                       <a>
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
-                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente físico digital. </br></br>
+                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
                         
                         *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
 
@@ -560,7 +560,7 @@
 
               <div class="col-md-6">
                 <!--Ejemplo-->
-                <button class="col btn botonejemdoc btntit mx-auto d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int2" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/escolares/Titulo2_intermedio.png"></button>
+                <button class="col btn botonejemdoc btntit mx-auto d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int2" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/escolares/Titulo2_intermedio.PNG"></button>
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int2" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
@@ -574,7 +574,7 @@
                     <div class="col">
   
   
-             n         <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
+                      <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
                             <img src="img/escolares/Titulo2_intermedio.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
@@ -610,7 +610,7 @@
                       <a>
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
-                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente físico digital. </br></br>
+                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
                         
                         *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
 
