--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,5 +1,7 @@
 <div class="my-3 py-3">
-
+<link rel="shortcut icon" href="img/logo.ico">
+  
+  
   <div class="card card-login position-absolute top-50 start-50 translate-middle border-0" style="width: 350px;">
 
     <div class="letra text-center pt-4">
