--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -627,7 +627,7 @@
             <a>
                 Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
-                certificado de estudios Utel.      
+                certificado de estudios Utel. <br/><br/>
 
                 El tiempo estimado es de 30 dias hábiles.            
             </a>
