--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -609,7 +609,7 @@
 
                       7.-Firma.
 
-                      <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                      <a href="docs/docss/ssutel/cassutel.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                     </div>
                   </div>
                 </div>
@@ -685,7 +685,7 @@
 
                       </p>
 
-                      <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                      <a href="docs/docss/ssutel/rgssutel.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                     </div>
                   </div>
                 </div>
@@ -759,7 +759,7 @@
                         5.-Firma. <br />
 
                       </p>
-                      <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                      <a href="docs/docss/ctssutel.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                     </div>
                   </div>
                 </div>
@@ -1495,7 +1495,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/juventudes/solicitudjuventudes.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -1572,7 +1572,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/juventudes/rgjuventudes.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1648,7 +1648,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/juventudes/constanciajuventudes.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1754,7 +1754,7 @@
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomSolicitudcoachtitu" aria-controls="offcanvasBottom"><img
                 style="height: 200px" src="img/serviciosocial/coachtitu/carta-aceptacion.png"
-                title="Solicitud Servicio Social Trabajo Colaborativo"> </button>
+            title="Solicitud Servicio Social Trabajo Colaborativo"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomSolicitudcoachtitu"
               aria-labelledby="offcanvasBottomLabel">
@@ -1816,7 +1816,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/coachypro/cacoachypro.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1826,7 +1826,7 @@
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomReporteCoachtitu" aria-controls="offcanvasBottom"><img
                 style="height: 200px" src="img/serviciosocial/coachtitu/reporte-global.png"
-                title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
+            title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomReporteCoachtitu"
               aria-labelledby="offcanvasBottomLabel">
@@ -1892,7 +1892,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/coachypro/rgcoachypro.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1967,7 +1967,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/coachypro/ctcoachypro.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -2135,7 +2135,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/comunidad/cacomunidad.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -2211,7 +2211,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/comunidad/rgcomunidad.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -2219,9 +2219,9 @@
 
             <!--Constanciade de termino Servicio Social Para la Comunidad-->
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasBottomConstanciaComunidad" aria-controls="offcanvasBottom"><img
-                style="height: 200px" src="img/serviciosocial/comunidad/reporte-global.png"
-                title="Constanciade de termino Servicio Social Trabajo Colaborativo"> </button>
+            data-bs-target="#offcanvasBottomConstanciaComunidad" aria-controls="offcanvasBottom"><img
+            style="height: 200px" src="img/serviciosocial/comunidad/reporte-global.png"
+            title="Constanciade de termino Servicio Social Trabajo Colaborativo"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomConstanciaComunidad"
               aria-labelledby="offcanvasBottomLabel">
@@ -2285,7 +2285,7 @@
                       5.-Firma. <br />
 
                     </p>
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/comunidad/ctcomunidad.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -2720,8 +2720,8 @@
             <!--Solicitud Servicio Social en Empresas y Emprendimientos-->
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomSolicitudEmprendimiento" aria-controls="offcanvasBottom"><img
-                style="height: 200px" src="img/serviciosocial/empresas/carta-aceptacion.png"
-                title="Solicitud Servicio Social Trabajo Colaborativo"> </button>
+              style="height: 200px" src="img/serviciosocial/empresas/carta-aceptacion.png"
+              title="Solicitud Servicio Social Trabajo Colaborativo"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomSolicitudEmprendimiento"
               aria-labelledby="offcanvasBottomLabel">
@@ -2783,7 +2783,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/caempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -2794,7 +2794,7 @@
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomReporteGlobalEmprendimiento" aria-controls="offcanvasBottom"><img
                 style="height: 200px" src="img/serviciosocial/empresas/reporte-global.png"
-                title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
+              title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomReporteGlobalEmprendimiento"
               aria-labelledby="offcanvasBottomLabel">
@@ -2860,7 +2860,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/rgempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -2935,7 +2935,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/empresas/ctempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
