--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -1780,12 +1780,311 @@
 
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
                 Formación y Calidad
               </button>
             </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div id="collapse13" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
+
+                <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
+
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">César Eli Aguilar Luna</h6>
+                      <p class="card-text">
+                        Correo: </br>caguillu@utel.edu.mx</br>
+                        Línea de Trabajo:</br> B1, B5+, Nivelación, Inbound 
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Erick Antonio Santiago Martínez</h6>
+                      <p class="card-text">
+                        Correo: </br>easantim@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Contención y Preventivo, Inbound, B5+
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Karla Karen Espinoza Hernández</h6>
+                      <p class="card-text">
+                        Correo: </br>kespinhe@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Onb 2.0 
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">María Guadalupe Castillo Delgado</h6>
+                      <p class="card-text">
+                        Correo: </br>cgcastide@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Onb 2.0
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Luna Izamar Vega Ramírez</h6>
+                      <p class="card-text">
+                        Correo: </br>lvegara@utel.edu.mx</br>
+                        Línea de Trabajo:</br> B3/B4, B5+, B2 
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Montserrat Piña Nava</h6>
+                      <p class="card-text">
+                        Correo: </br>mpinana@utel.edu.mx</br>
+                        Línea de Trabajo:</br> B3/B4, B1, B2
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">María Fernanda Sánchez Valdez</h6>
+                      <p class="card-text">
+                        Correo: </br>msancheval@utel.edu.mx</br>
+                        Línea de Trabajo:</br> RT, Inbound 
+
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Mariana Hernández García</h6>
+                      <p class="card-text">
+                        Correo: </br>mahernanga@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Posgrados B1-B2, Ejecutivas, Posgrados Avanzados 
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Estefanía Maricarmen Rojas Jiménez</h6>
+                      <p class="card-text">
+                        Correo: </br>erojasjim@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Posgrados Avanzados, Onboarding Posgrados Posgrados B1-B2
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Víctor Eduardo Salas García</h6>
+                      <p class="card-text">
+                        Correo: </br>vsalasgar@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">César Luis González Gallegos</h6>
+                      <p class="card-text">
+                        Correo: </br>cgonzalgal@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Inbound, Posgrados, B5+
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">ANALISTA CALIDAD ÉXITO ESTUDIANTIL MÉXICO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Viridiana Aguirre Meneses</h6>
+                      <p class="card-text">
+                        Correo: </br>vaguirme@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Onb 2.0
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Carla Melissa Oliveros Nieto</h6>
+                      <p class="card-text">
+                        Correo: </br>cramosni@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Formador de Éxito Estudiantil
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FTEAM LEADER DE FORMACIÓN DE ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">María Guadalupe García Madera</h6>
+                      <p class="card-text">
+                        Correo: </br>mgarcima@utel.edu.mx</br>
+                        Línea de Trabajo:</br> Team Leader de Formación De Éxito Estudiantil
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Bernice Elisabeth Martínez Feliciano</h6>
+                      <p class="card-text">
+                        Correo: </br>bmartife@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Lesly Mariana Hernández Guzmán</h6>
+                      <p class="card-text">
+                        Correo: </br>lhernanguz@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Dulce Areli Aguirre Roa</h6>
+                      <p class="card-text">
+                        Correo: </br>daguirrroa@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR ESPECIALISTA EN I6</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Sergio Aguirre Santillana</h6>
+                      <p class="card-text">
+                        Correo: </br>saguirrsan@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR ESPECIALISTA EN I6</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Joshua Alejandro Fernández Salazar</h6>
+                      <p class="card-text">
+                        Correo: </br>jfernansal@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR ESPECIALISTA EN I6</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Jairo Adiel Torres Vilchis</h6>
+                      <p class="card-text">
+                        Correo: </br>jtorrevi@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">SUPERVISOR DE FORMACIÓN</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Dulce Beatriz Mendoza Contreras</h6>
+                      <p class="card-text">
+                        Correo: </br>dmendoco@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">SUPERVISOR CALIDAD ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Luz Alejandra Viquez Ramírez</h6>
+                      <p class="card-text">
+                        Correo: </br>lvazqura@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE GESTIÓN ESCOLAR</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Kenya Zarhay Enríquez Castelán</h6>
+                      <p class="card-text">
+                        Correo: </br>kenriqca@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL LATAM</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Yamile Trujillo Lopez</h6>
+                      <p class="card-text">
+                        Correo: </br>yamile.trujillo@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE GESTIÓN ESCOLAR</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Giselle Lopez Ibañez</h6>
+                      <p class="card-text">
+                        Correo: </br>glopeziba@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Edgar Cruz Olvera</h6>
+                      <p class="card-text">
+                        Correo: </br>ecruzolv@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL LATAM</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Mónica Alexandra Viracachá Méndez</h6>
+                      <p class="card-text">
+                        Correo: </br>monica.viracacha@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                   <div class="col card border-0">
+                    <div class="card-body">
+                      <h5 class="card-title">FORMADOR DE ÉXITO ESTUDIANTIL LATAM</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Andrés Felipe Cediel Castañeda</h6>
+                      <p class="card-text">
+                        Correo: </br>andres.cediel@utel.edu.mx</br>
+                      </p>
+                    </div>
+                  </div>
+
+                </div>
                 
               </div>
             </div>
